<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ChooseActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="70dp"
        android:text="@string/choose_sentiment_mode_title"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="onClickKindModeBtn"
        android:text="@string/choose_kind_mode_btn"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="onClickNormalModeBtn"
        android:text="@string/choose_normal_mode_btn"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="onClickEvilModeBtn"
        android:text="@string/choose_evil_mode_btn"
        android:textAllCaps="false"
        android:textSize="18sp" />
</LinearLayout>