<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="310dp"
            android:layout_height="37dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/new_game_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickNewGame"
                android:text="@string/newGame"
                android:visibility="visible"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="4dp" />

            <Button
                android:id="@+id/enough_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickEnough"
                android:text="@string/enough_cards"
                android:visibility="visible"
                tools:layout_editor_absoluteX="178dp"
                tools:layout_editor_absoluteY="4dp" />

            <Button
                android:id="@+id/give_up_btn"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickGiveUpBtn"
                android:text="@string/give_up_btn" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:id="@+id/dialog_txt"
                android:layout_width="306dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingRight="8dp"
                android:text="@string/dialog_txt"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/bot"
                android:layout_width="196dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="onClickBot"
                app:srcCompat="@drawable/bot" />
        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView2"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:id="@+id/bot_cards_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" />
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="left"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2">

            <TextView
                android:id="@+id/score_txt"
                android:layout_width="169dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/cards_img"
                android:layout_width="wrap_content"
                android:layout_height="93dp"
                android:clickable="true"
                android:onClick="onClickCards"
                app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/carts" />
        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:id="@+id/cards_place"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>